--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ My research interests center around the study and upgrade of linear accelerators
       </tr>
       <tr>
         <td>2018-2019</td>
-        <td>Sudent Researcher in Medical Physics at CHUV</td>
+        <td>Student Researcher in Medical Physics at CHUV</td>
       </tr>
     </tbody>
     <tfoot>
